--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,6 +1,6 @@
-<h3>{{product.title | uppercase}}</h3>
+<h3 appHighlight>{{product.title | uppercase}}</h3>
 <img [src]="product.image" alt="">
 <strong>{{product.price | currency}}</strong>
 <p>{{product.description | slice:0:48}}</p>
 <p>{{today | date: 'medium'}}</p>
-<button (click)="addcart()">Agregar al carrito</button>
+<button (click)="addCart()">Agregar al carrito</button>
