--- a/src/app/product/components/product/product.component.html
+++ b/src/app/product/components/product/product.component.html
@@ -3,4 +3,5 @@
 <strong>{{product.price | currency}}</strong>
 <p>{{product.description | slice:0:48}}</p>
 <p>{{today | date: 'medium'}}</p>
-<button (click)="addCart()">Agregar al carrito</button>
+<button (click)="addCart()"mat-raised-button color="accent">Agregar al carrito</button>
+<a [routerLink]="['/products', product.id]">Ver detalle></a> 
