--- a/src/app/contact/components/contact/contact.component.html
+++ b/src/app/contact/components/contact/contact.component.html
@@ -1,1 +1,25 @@
-<p>Contacto</p>
+<div class="contenedor">
+
+  <div >
+      <img id="imagen" src="./../../../../assets/imagenes/portada2.png" alt="Contacto"> 
+  </div>
+   <div>
+        <form class="formulario">
+          <fieldset>
+            <legend><h1>Contactanos</h1></legend>
+            <br>
+            <figcaption>Hola! si tienes alguna duda o queja, con gusto te atenderemos.</figcaption>
+            <br>
+            <input class="celda" type="nombre" placeholder="Nombre" >
+            <br>
+            <input class="celda" type="email"  placeholder="Email">
+            <br>
+            <input class="texto" type="mesaje" placeholder="Mensaje">
+            <br>
+            <input class="enviar" type="button" value="Enviar">
+            <br>
+            <h3 class="firma">CindyStore</h3>
+        </fieldset>
+        </form>
+    </div>
+</div>
