--- a/src/app/contact/components/contact/contact.component.html
+++ b/src/app/contact/components/contact/contact.component.html
@@ -16,7 +16,7 @@
             <br>
             <input class="texto" type="mesaje" placeholder="Mensaje">
             <br>
-            <input class="enviar" type="button" value="Enviar">
+            <input class="enviar" type="submit" value="Enviar">
             <br>
             <h3 class="firma">CindyStore</h3>
         </fieldset>
